Use css grid for photo array, add correct logo on mobile nav

--- a/assets/community-cards-styles.css
+++ b/assets/community-cards-styles.css
@@ -67,3 +67,23 @@ img.weblate {
    height: 35;
    margin-bottom: 15px;
 }
+
+
+/* ---------------- */
+
+.photo-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+@media (max-width: 960px) {
+    .photo-grid {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media (max-width: 740px) {
+    .photo-grid {
+        grid-template-columns: 1fr;
+    }
+}
